Added authentication with username+password / jwt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.password=1111
 # Hibernate settings
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+
+task-manager.jwt.duration = 600000
+task-manager.jwt.secret = 2LFM+PaEC4Uxd94Lev6d9vhSIYmBFiwqI0eh4bzspWY=
